# menu_api

./: .env.example  .env.example.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_tests.yml
cache/: background_tasks.py  redis_cache.py
database/: database.py  models.py  redis.py
database/migrations/: env.py
database/migrations/versions/: 16237bb11024_fix_migration.py  1a48af3cfbab_fix_migration_5.py  4eb935f20af6_init_migration.py  6dfd39bc8082_fix_migration.py  795bf491c686_fix_migration.py  c375a20dd5b5_fix_migration_3.py  fab45af2fe55_fix_migration_4.py  ffb2190a0918_fix_migration.py
google_sheet/: celery_app.py  menuapi-414013-0bf6c7671560.json  sheet_parse.py
migrations/: env.py
migrations/versions/: 16237bb11024_fix_migration.py  4eb935f20af6_init_migration.py  fab45af2fe55_fix_migration_4.py
models/: models.py
repository/: base.py  dish.py  google_sheet.py  menu.py  submenu.py
serializers/: base.py  dish.py  menu.py  submenu.py
services/: base.py  dish.py  menu.py  submenu.py
tests/: conftest.py  test_script_postman.py
tests/crud_tests/: dish_api_test.py  menu_api_test.py  submenu_api_test.py
tests/data/: dish.py  menu.py  submenu.py
utils/: discount_utils.py  urls_utils.py
views/: dish.py  menu.py  submenu.py
