[tool.poetry]
name = "y-lab-homework1"
version = "0.1.0"
description = ""
authors = ["yakuzzaa <chornaya.gryazz@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["dotenv"], version = "^2.5.3"}
python-dotenv = "^1.0.0"
ruff = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
